fix: Set appropriate items gap in BurgerIngredients

--- a/src/components/burger-ingredients/burger-ingredients.module.css
+++ b/src/components/burger-ingredients/burger-ingredients.module.css
@@ -12,7 +12,7 @@
 
 .catalogContent {
   display: flex;
-  row-gap: 24px;
-  column-gap: 32px;
+  row-gap: 32px;
+  column-gap: 24px;
   flex-wrap: wrap;
 }
